# mapping

./: CMakeLists.txt  README.md
minecraft-headers/minecraft/: BinaryStream.h  Biome.h  BiomeRegistry.h  Block.h  BlockLegacy.h  BlockPalette.h  BlockTypeRegistry.h  ByteTag.h  CommandRegistry.h  CompoundTag.h  CompoundTagVariant.h  CreativeItemRegistry.h  HashedString.h  I18n.h  IntTag.h  Item.h  ItemDescriptor.h  ItemDescriptorCount.h  ItemInstance.h  ItemRegistry.h  ItemStack.h  ItemStackBase.h  ItemTag.h  Level.h  LevelSoundEventMap.h  ListTag.h  Localization.h  Memory.h  Minecraft.h  MinecraftCommands.h  ParticleTypeMap.h  ReadOnlyBinaryStream.h  Recipe.h  RecipeIngredient.h  Recipes.h  ServerInstance.h  StringTag.h  Tag.h  VanillaBlockConversion.h  mce.h  (+1 more)
src/: main.cpp
